Problem Solution Added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,20 @@
   "java.project.referencedLibraries": [
     "lib/**/*.jar",
     "javabasics/mysql-connector-j-9.0.0/mysql-connector-j-9.0.0.jar"
+  ],
+  "sqltools.connections": [
+    {
+      "mysqlOptions": {
+        "authProtocol": "default",
+        "enableSsl": "Disabled"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "vs code",
+      "username": "root",
+      "database": "test"
+    }
   ]
 }
